Voici mon portfolio sur le theme des jeux video enfin fini

--- a/css/index.css
+++ b/css/index.css
@@ -11,65 +11,61 @@
   src: url('coolvetica rg.ttf');
 }
 
+
+
+
 /** LA MISE EN PAGE GENERAL  **/
 
 html, body {
   background-color: rgb(236, 242, 194);
-  margin: 0
-  left: 0;
   width: 100%;
-  margin-top: 7%;
-  overflow-x: hidden;
+  border: 0;
+  margin: 0;
+
   }
 
 
 /** Bordure avec titre  **/
 
 header {
-  position: fixed;
-  top:0;
-  left:0;
+
   width: 100%;
+  height: 20%;
+  padding-top: 50px;
+  font-family: 'LoL';
+  background-color: rgb(207, 19, 19);
+  color: white;
+  text-align: center;
 }
 
 header h1 {
-
-font-family: 'LoL';
-border: 5px solid rgb(207, 19, 19);
-background-color: rgb(207, 19, 19);
-margin: 1px 0 0 0;
-
-color: white;
-text-align: center;
+  margin-top: 1%;
+  font-size: 3em;
 }
 
-/** Bordure 2 + commentaire **/
-
-header h3 {
-border: 4px solid rgb(221, 56, 54);
-background-color: rgb(221, 56, 54);
-padding: 5px 0 0 5px;
-margin: 0px 0px 0px 0px;
-text-align: center;
-color: white;
+header h3{
+  text-decoration : underline;
 }
+
+
 
 /** CEST LES LIENS UN D'SSOUS DU BORDEURE 2 **/
 
 nav {
+
   text-align: center;
+  width: 100%;
+  background-color: rgb(69, 1, 17);
 }
 
+
 nav a {
-  margin-left: 2%;
+  color: white;
+  padding: 0 3% 0 3%;
   font-size: 1.5em;
   display: inline-block;
   text-decoration: none;
-  color: white;
-  background-color: rgb(69, 1, 17);
-  border-radius: 70%;
-  padding: 3px 10px 3px 10px;
-  border: 3px rgb(207, 19, 19) solid;
+
 
 }
 
@@ -108,7 +104,6 @@ color: rgb(54, 22, 22)
 }
 
 #description {
-
   margin-top: 50px;
   text-align: justify;
 
@@ -116,6 +111,8 @@ color: rgb(54, 22, 22)
 }
 
 body p {
+  margin-left: 10%;
+  margin-right: 10%;
   font-size: 1em;
   font-family:'coolvetica';
 
@@ -154,7 +151,8 @@ body p {
 
 .imagefolio img {
   width: 100%;
-  
+  height: 400px;
+
 }
 
 
@@ -178,4 +176,36 @@ body p {
 figcaption {
 
   background: linear-gradient(to bottom, rgb(236, 242, 194), red);
+  font-family: 'LoL';
+  font-size: 1.1em;
+  text-align: center;
+}
+
+
+
+
+/** ----------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------
+------------------- CONTACT ---------------- CONTACT ----------------------- CONTACT ------------------
+------------------------------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------- **/
+
+#sectioncontact {
+margin: 5% 15% 0 15%;
+  text-align: justify;S
+}
+
+section h3 {
+  font-size: 2em;
+  font-family: 'LoL'
+  }
+
+section a {
+  text-decoration: none;
+}
+
+section img {
+  vertical-align: middle;
+  width: 30px;
+
 }
